Fix categories on home page overflow

--- a/vikalpsangam/sass/home_page.scss
+++ b/vikalpsangam/sass/home_page.scss
@@ -145,6 +145,7 @@
     border-right: 10px solid $light-gray-col;
 
     .stories-by-category {
+      overflow: hidden;
       height: 220px;
       display: flex;
       flex-direction: column;
